@@ -1,6 +1,7 @@
 version 2.1-beta4  XX-Dec-2012
 . [FIX] CocosDenshion: Mute can be called before loading a file (issue #1434)
-. [FIX] Transitions: Fixed possible memory leak in some tranitions.
+. [FIX] Transitions: Fixed possible memory leak in some tranitions
+		Events are enabled/disabled at onEnter/onExit preventing possible bugs
 . [FIX] Tests: Box2dTestBed: Using new API for touches/accelerometer
 
 
